--- a/db/configurations/goodmoves/layouts/default.hbs
+++ b/db/configurations/goodmoves/layouts/default.hbs
@@ -135,7 +135,7 @@ if(location.host.indexOf('.local') > -1){
               </nav>
               <div class="mdc-menu-anchor hide-md hide-sm">
                 <button class="mdc-top-app-bar__action-item" data-menu-target="#upper-menu">
-                  <i class="fa fa-fw fa-ellipsis-h"></i>
+                  <i class="far fa-fw fa-ellipsis-h"></i>
                 </button>
                 <div class="mdc-menu" tabindex="-1" data-mdc-auto-init="MDCMenu" id="upper-menu">
                   <div class="mdc-menu__items mdc-list" role="menu" aria-hidden="true">
@@ -150,9 +150,9 @@ if(location.host.indexOf('.local') > -1){
               <div class="mdc-menu-anchor">
                 <!-- Logged in: -->
                 <button class="mdc-button" data-menu-target="#user-menu">
-                  <span class="fas fa-fw fa-user-circle"></span>
+                  <span class="fal fa-fw fa-user-circle"></span>
                   User McUserface
-                  <span class="fal fa-fw fa-angle-down"></span>
+                  <span class="far fa-fw fa-angle-down"></span>
                 </button>
                 <div class="mdc-menu" tabindex="-1" data-mdc-auto-init="MDCMenu" id="user-menu">
                   <div class="mdc-menu__items mdc-list" role="menu" aria-hidden="true">
