--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -30,15 +30,15 @@ body {
   padding-top: $toolbar-height;
 }
 header {
-  background-image: linear-gradient(66deg, $mdc-theme-primary, $mdc-theme-primary 50%, white 50.1%, white);
+  background-image: linear-gradient(60deg, $mdc-theme-primary, $mdc-theme-primary 50%, white 50.08%, white);
   .container-fluid {
     padding: 0;
     .mdc-top-app-bar__section--align-start {
-      background-image: linear-gradient(66deg, $mdc-theme-primary, $mdc-theme-primary 265px, $mdc-theme-old 266px, $mdc-theme-old);
+      background-image: linear-gradient(60deg, $mdc-theme-primary, $mdc-theme-primary 265px, $mdc-theme-old 266px, $mdc-theme-old);
       min-width: 266px;
     }
     .mdc-top-app-bar__section--align-end {
-      background-image: linear-gradient(66deg, $mdc-theme-old, $mdc-theme-old 63px, white 64px, white);
+      background-image: linear-gradient(60deg, $mdc-theme-old, $mdc-theme-old 63px, white 64px, white);
     }
     .mdc-top-app-bar__title {
       padding: 0;
@@ -230,6 +230,12 @@ a {
     }
   }
 }
+.mdc-card.search-result {
+  margin-bottom: $unit;
+}
+.mdc-card.search-result:last-child {
+  margin-bottom: 0;
+}
 
 .mdc-form-field,
 .mdc-select,
@@ -419,11 +425,9 @@ body {
 
 footer {
   border-top: .6rem solid $mdc-theme-primary-light;
-  //map-get($colours, 'footer-light');
   background-color: $mdc-theme-primary;
-  background-image: linear-gradient(290deg, $mdc-theme-primary, $mdc-theme-primary-dark 95%, $mdc-theme-primary-dark);
-  background-image: -webkit-linear-gradient(290deg, $mdc-theme-primary, $mdc-theme-primary-dark 95%, $mdc-theme-primary-dark);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="$mdc-theme-primary",endColorstr="$mdc-theme-primary-dark",GradientType=0);
+  background-image: linear-gradient(60deg, rgb(60, 117, 36), rgb(60, 117, 36) 96%, rgb(30, 59, 18) 96.08%, rgb(30, 59, 18));
+  background-image: -webkit-linear-gradient(60deg, rgb(60, 117, 36), rgb(60, 117, 36) 96%, rgb(30, 59, 18) 96.08%, rgb(30, 59, 18));
   .footer-main {
     padding: 0;
     margin-bottom: 0;
