--- a/db/configurations/goodmoves/partials/vacancy/detail-view.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/detail-view.hbs
@@ -3,7 +3,7 @@
     <div class="mdc-card__media mdc-card__media--square demo-card__media search-result-card__media--organisation" style="background-image:url({{organisation.logo_url}});"></div>
     <div class="search-result-card__info">
       <div class="search-result-card__info-title mdc-typography--headline">
-        <a href="/vacancy/{{slug}}">{{title}}</a>
+        {{title}}
       </div>
       <div class="search-result-card__info-organisation mdc-typography--body1">
         <a href="/organisation/{{organisation.slug}}">{{organisation.name}}</a>
@@ -36,7 +36,7 @@
   </div>
   <hr class="mdc-list-divider" />
   <div class="search-result-article__snippet mdc-typography--body1">
-    {{{og_summary}}}
+    {{{description}}}
   </div>
   <hr class="mdc-list-divider" />
   <div class="mdc-card__actions">
