--- a/db/configurations/goodmoves/partials/vacancy/gist-view.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/gist-view.hbs
@@ -9,7 +9,7 @@
         <a href="/organisation/{{organisation.slug}}">{{organisation.name}}</a>
       </div>
       <div class="search-result-card__info-details mdc-typography--caption">
-        <span class="fal fa-calendar fw" title="Closing date"></span>
+        <span class="fal fa-calendar-alt fa-fw" title="Closing date"></span>
         {{{momentFormat (moment closing_date "x") "Do MMMM YYYY"}}}
       </div>
     </div>
