--- a/db/configurations/goodmoves/partials/vacancy/status.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/status.hbs
@@ -1,6 +1,6 @@
 {{#compare vacancy_status "!==" "vacancy-open" ~}}
 <div class="panel-heading red white-text {{vacancy_status}}">
-  <i class="fa fa-info-circle fa-fw"></i>
+  <i class="fal fa-info-circle fa-fw"></i>
   {{#compare vacancy_status "vacancy-closed" ~}}
   This vacancy has now closed
   {{/compare ~}}
