--- a/db/configurations/goodmoves/partials/vacancy/map-view.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/map-view.hbs
@@ -8,13 +8,13 @@
   <div class="post-info">
     {{#if closing_date}}
     <div class="post-info-item post-info-closing">
-      <span class="fal fa-calendar fw" title="Closing date"></span>
+      <span class="fal fa-calendar-alt fa-fw" title="Closing date"></span>
       {{{momentFormat (moment closing_date "x") "Do MMMM YYYY"}}}
     </div>
     {{/if}}
     {{#if salary}}
     <div class="post-info-item post-info-salary">
-      <span class="fal fa-money fa-fw" title="Salary"></span>
+      <span class="fal fa-money-bill fa-fw" title="Salary"></span>
       {{{salary}}}
     </div>
     {{/if}}
