--- a/db/configurations/goodmoves/templates/jobs/job.hbs
+++ b/db/configurations/goodmoves/templates/jobs/job.hbs
@@ -6,13 +6,9 @@
           {{> search_form}}
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content v-margin">
-          {{> search_info paging=data.primaryResponse.pagination}}
-
           {{#each data.primaryResponse.hits.hits ~}}
-          {{> results_view _source}}
+          {{> detail_view _source}}
           {{/each ~}}
-
-          {{> pagination paging=data.primaryResponse.pagination}}
         </div>
       </div>
     </div>
