--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -1,8 +1,19 @@
-<section id="search-overlay" class="search-overlay">
-  <div class="container-fluid">
-    <div class="mdc-layout-grid">
-      <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop">
+<div class="container-fluid">
+  <div class="mdc-layout-grid search-overlay">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+        <section id="search-overlay" class="search-overlay-panel">
+          <div id="search-tab-bar" class="mdc-tab-bar" data-mdc-auto-init="MDCTabBar">
+            <a class="mdc-tab" href="/">
+              <span class="far fa-map-marker-alt fa-fw" title="Location"></span>
+              Map
+            </a>
+            <a class="mdc-tab" href="#" id="detailed-results">
+              <span class="far fa-list fa-fw" title="Location"></span>
+              List
+            </a>
+            <span class="mdc-tab-bar__indicator"></span>
+          </div>
           <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
             <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="what">
             <label class="mdc-floating-label mdc-floating-label--float-above" for="what">What</label>
@@ -13,8 +24,7 @@
             </div>
             <div class="mdc-notched-outline__idle"></div>
           </div>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+          <div id="search-terms" class="mdc-chip-set"></div>
           <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
             <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="where" placeholder="">
             <label class="mdc-floating-label mdc-floating-label--float-above" for="where">Where</label>
@@ -25,8 +35,6 @@
             </div>
             <div class="mdc-notched-outline__idle"></div>
           </div>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
           <div class="mdc-form-field">
             <div class="mdc-select" data-mdc-auto-init="MDCSelect">
               <select class="mdc-select__native-control fullwidth" id="distance">
@@ -41,19 +49,13 @@
               </select>
             </div>
           </div>
-        </div>
+          <!-- <button type="button" id="detailed-results" class="mdc-button mdc-button--raised">Detailed results</button> -->
+        </section>
       </div>
     </div>
-    <div id="search-terms" class="mdc-chip-set"></div>
-    <button type="button" id="detailed-results" class="mdc-button mdc-button--raised">Detailed results</button>
   </div>
-</section>
+</div>
 <section class="search-results">
   <div id="map-full"></div>
-</section>
-<section>
-  <div class="container-fluid">
-    {{> login}}
-  </div>
 </section>
 {{> currently_recruiting}}
