--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -147,6 +147,9 @@ p,
 .mdc-typography--body1 {
   font-size: 1rem;
 }
+.mdc-typography--headline {
+  font-size: 1.4rem;
+}
 .mdc-card__title,
 .mdc-textfield__label,
 .mdc-typography--title,
@@ -238,16 +241,70 @@ a {
     }
   }
 }
-.mdc-card .mdc-card__actions,
-.search-result-article__snippet {
-  padding: $unit;
+.mdc-card .mdc-card__actions {
+  padding: $unit/2;
+  .mdc-card__action-buttons {
+    margin-left: $unit/2;
+  }
 }
 
 .mdc-card.search-result {
+  position: relative;
+  z-index: 1;
+  width: 100%;
   margin-bottom: $unit;
+  .search-result-article__snippet {
+    padding: $unit;
+    background-color: $mdc-theme-primary-light;
+  }
+  .mdc-card__actions {
+    background-color: $mdc-theme-primary;
+    .mdc-card__action {
+      color: white;
+    }
+  }
+  .mdc-list-divider {
+    border: none;
+  }
 }
 .mdc-card.search-result:last-child {
   margin-bottom: 0;
+}
+.mdc-card.search-result::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  box-shadow: 0px 6px 6px -3px rgba(0, 0, 0, 0.2), 0px 10px 14px 1px rgba(0, 0, 0, 0.14), 0px 4px 18px 3px rgba(0, 0, 0, 0.12);
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.mdc-card.search-result:hover::after {
+  opacity: 1;
+}
+
+.mdc-card {
+  .mdc-card__actions {
+    .mdc-card__action--shortlist .fa-star {
+      color: $mdc-theme-primary;
+      font-size: 1.75rem;
+    }
+    .mdc-card__action--shortlist:hover .fa-star {
+      font-weight: 900;
+    }
+  }
+}
+.mdc-card.vacancy-saved {
+  .mdc-card__actions {
+    .mdc-card__action--shortlist .fa-star {
+      font-weight: 900;
+    }
+    .mdc-card__action--shortlist:hover .fa-star {
+      font-weight: 400;
+    }
+  }
 }
 
 .mdc-form-field,
@@ -308,6 +365,7 @@ a {
       padding: 0;
       z-index: 10;
       position: absolute;
+      width: 301px;
       .search-overlay-panel {
         padding: $unit;
         background-color: $mdc-theme-primary;
@@ -322,11 +380,14 @@ a {
           z-index: 1;
           color: #444444;
         }
-        .mdc-tab {
-          color: white;
-        }
-        .mdc-tab-bar__indicator {
-          background-color: white;
+        .mdc-tab-bar {
+          width: 100%;
+          .mdc-tab {
+            color: white;
+          }
+          .mdc-tab-bar__indicator {
+            background-color: white;
+          }
         }
       }
       .search-overlay-terms {
