--- a/db/configurations/goodmoves/partials/vacancy/detail-view.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/detail-view.hbs
@@ -12,21 +12,21 @@
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
             <div class="search-result-card__info-location mdc-typography--body1">
-              <span class="fal fa-map-marker-alt fa-fw" title="Location"></span>
+              <span class="far fa-map-marker-alt fa-fw" title="Location"></span>
               {{location}}
             </div>
             <div class="search-result-card__info-salary mdc-typography--body1">
-              <span class="fal fa-money-bill fa-fw" title="Salary"></span>
+              <span class="far fa-money-bill fa-fw" title="Salary"></span>
               {{{salary}}}
             </div>
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
             <div class="search-result-card__info-status mdc-typography--body1">
-              <span class="fal fa-building fa-fw" title="Status"></span>
+              <span class="far fa-building fa-fw" title="Status"></span>
               {{status}}
             </div>
             <div class="search-result-card__info-closing mdc-typography--body1">
-              <span class="fal fa-calendar-alt fa-fw" title="Closing date"></span>
+              <span class="far fa-calendar-alt fa-fw" title="Closing date"></span>
               {{momentFormat (moment closing_date "x") "Do MMMM YYYY"}}
             </div>
           </div>
