--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -287,9 +287,21 @@ a {
 
 .mdc-card {
   .mdc-card__actions {
+    .mdc-card__action--shortlist {
+      .fa-stack {
+        width: $nav-height;
+        height: $nav-height;
+        .fa-circle {
+          font-size: $nav-height;
+        }
+        .fa-star {
+          font-size: 25px;
+          line-height: $nav-height;
+        }
+      }
+    }
     .mdc-card__action--shortlist .fa-star {
       color: $mdc-theme-primary;
-      font-size: 1.75rem;
     }
     .mdc-card__action--shortlist:hover .fa-star {
       font-weight: 900;
