Fixed maps & updated templates

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -263,6 +263,9 @@ a {
       color: white;
     }
   }
+}
+.mdc-card.full,
+.mdc-card.search-result {
   .mdc-list-divider {
     border: none;
   }
@@ -445,7 +448,7 @@ body {
 }
 
 /* Search results card */
-.search-result-card__info-row {
+.mdc-card__info--vacancy-row {
   padding: $unit/2;
   display: flex;
   border-top-left-radius: inherit;
@@ -458,7 +461,7 @@ body {
   margin: $unit/2;
 }
 
-.search-result-card__info {
+.mdc-card__info--vacancy {
   display: flex;
   width: 100%;
   flex-direction: column;
@@ -470,7 +473,7 @@ body {
   .fa-fw {
     margin-right: $unit/4;
   }
-  .search-result-card__info-organisation {
+  .mdc-card__info--vacancy-organisation {
     padding: $unit/2 0;
   }
 }
@@ -600,11 +603,11 @@ footer {
   }
   h3 {
     color: white;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     border-bottom: .2rem solid $mdc-theme-primary-light;
     margin-top: 0;
     margin-bottom: 1rem;
-    padding: 1rem 0 .5rem;
+    padding: .75rem 0 .5rem;
     font-weight: 600;
   }
   .about a,
