--- a/db/configurations/goodmoves/templates/jobs/search.hbs
+++ b/db/configurations/goodmoves/templates/jobs/search.hbs
@@ -9,7 +9,7 @@
           {{> search_info paging=data.primaryResponse.pagination}}
 
           {{#each data.primaryResponse.hits.hits ~}}
-          {{> results_view _source}}
+          {{> vacancy_search_result _source}}
           {{/each ~}}
 
           {{> pagination paging=data.primaryResponse.pagination}}
