--- a/db/configurations/goodmoves/templates/pages/home-search.hbs
+++ b/db/configurations/goodmoves/templates/pages/home-search.hbs
@@ -6,7 +6,7 @@
     "Id": {{{stringify _id}}},
     "geo_vacancy_coords": {{{stringify _source.geo_vacancy_coords}}},
     "title": {{{stringify _source.title}}},
-    "info_window": {{{stringify (component "map_view" _source)}}}
+    "info_window": {{{stringify (component "vacancy_map" _source)}}}
   }{{#unless @last}},{{/unless}}
   {{/each}}
   ]
