--- a/db/configurations/goodmoves/templates/jobs/job.hbs
+++ b/db/configurations/goodmoves/templates/jobs/job.hbs
@@ -7,7 +7,7 @@
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content v-margin">
           {{#each data.primaryResponse.hits.hits ~}}
-          {{> detail_view _source}}
+          {{> vacancy_full _source}}
           {{/each ~}}
         </div>
       </div>
