--- a/db/configurations/goodmoves/layouts/default.hbs
+++ b/db/configurations/goodmoves/layouts/default.hbs
@@ -269,7 +269,7 @@ if(location.host.indexOf('.local') > -1){
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone about">
                   <h3>About</h3>
                   <p>
-                    <strong>good</strong>moves is run by the <a href="http://scvo.org">Scottish Council for Voluntary Organisations</a>.
+                    <strong>good</strong>moves is the premier careers hub for the civil society, charity and voluntary sector &mdash; run by the <a href="http://scvo.org">Scottish Council for Voluntary Organisations</a>.
                   </p>
                 </div>
               </div>
