--- a/db/configurations/goodmoves/partials/vacancy/key-info.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/key-info.hbs
@@ -10,32 +10,36 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-          {{#if location ~}}
-          <div class="mdc-card__info--vacancy-location mdc-typography--body1">
-            <span class="far fa-map-marker-alt fa-fw" title="Location"></span>
-            {{location}}
-          </div>
-          {{/if ~}}
-          {{#if salary ~}}
-          <div class="mdc-card__info--vacancy-salary mdc-typography--body1">
-            <span class="far fa-money-bill fa-fw" title="Salary"></span>
-            {{{salary}}}
-          </div>
-          {{/if ~}}
+          <ul class="fa-ul">
+            {{#if location ~}}
+            <li class="mdc-card__info--vacancy-location mdc-typography--body1">
+              <span class="fa-li"><span class="far fa-map-marker-alt fa-fw" title="Location"></span></span>
+              {{location}}
+            </li>
+            {{/if ~}}
+            {{#if salary ~}}
+            <li class="mdc-card__info--vacancy-salary mdc-typography--body1">
+              <span class="fa-li"><span class="far fa-money-bill fa-fw" title="Salary"></span></span>
+              {{{salary}}}
+            </li>
+            {{/if ~}}
+          </ul>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-          {{#if status ~}}
-          <div class="mdc-card__info--vacancy-status mdc-typography--body1">
-            <span class="far fa-building fa-fw" title="Status"></span>
-            {{status}}
-          </div>
-          {{/if ~}}
-          {{#if closing_date ~}}
-          <div class="mdc-card__info--vacancy-closing mdc-typography--body1">
-            <span class="far fa-calendar-alt fa-fw" title="Closing date"></span>
-            {{momentFormat (moment closing_date "x") "Do MMMM YYYY"}}
-          </div>
-          {{/if ~}}
+          <ul class="fa-ul">
+            {{#if status ~}}
+            <li class="mdc-card__info--vacancy-status mdc-typography--body1">
+              <span class="fa-li"><span class="far fa-building fa-fw" title="Status"></span></span>
+              {{status}}
+            </li>
+            {{/if ~}}
+            {{#if closing_date ~}}
+            <li class="mdc-card__info--vacancy-closing mdc-typography--body1">
+              <span class="fa-li"><span class="far fa-calendar-alt fa-fw" title="Closing date"></span></span>
+              {{momentFormat (moment closing_date "x") "Do MMMM YYYY"}}
+            </li>
+            {{/if ~}}
+          </ul>
         </div>
       </div>
     </div>
