Basic shortlist functionality

--- a/db/configurations/goodmoves/layouts/default.hbs
+++ b/db/configurations/goodmoves/layouts/default.hbs
@@ -327,6 +327,7 @@ if(location.host.indexOf('.local') > -1){
   data-cookie="CookieInfoScript"
   data-text-align="left">
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@7/dist/polyfill.min.js"></script>
   <script src="/assets/js/class-inheritance.js" async defer></script>
   <script src="/assets/js/goodmoves/site-controller.js"></script>
   <!--{section:foot}-->
